--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -2,12 +2,14 @@
   "name": "auth",
   "version": "0.0.0",
   "private": true,
-  "main": "./index.ts",
+  "main": "./dist/index.js",
   "scripts": {
     "lint": "eslint .",
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
     "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+
+    "build": "tsup"
   },
   "prettier": "@pedaki/prettier-config"
 }
