--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/index",
-    "build": "tsc",
+    "build": "tsup",
     "start": "node dist/index.js",
 
     "lint": "eslint .",
