--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "turbo": "latest",
     "typescript": "^5.2.2",
     "vitest": "^0.34.5",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "tsup":"^7.2.0"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
