--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -8,13 +8,13 @@
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "noEmit": true,
     "incremental": true,
     "noUncheckedIndexedAccess": true,
     "composite": false,
@@ -26,10 +26,7 @@
     "preserveWatchOutput": true,
     "experimentalDecorators": true,
     "verbatimModuleSyntax": true,
-    "baseUrl": ".",
-    "paths": {
-      "~/*": ["src/*"],
-    }
+    "baseUrl": "."
   },
   "include": [
     ".eslintrc.cjs",
