--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "@pedaki/api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -20,17 +20,19 @@
     "@fastify/cors": "^8.4.0",
     "@fastify/swagger": "^8.10.1",
     "@fastify/swagger-ui": "^1.9.3",
+    "@auth/prisma-adapter": "^1.0.2",
     "@pulumi/aws": "^6.2.0",
     "@pulumi/random": "^4.14.0",
     "@pulumi/pulumi": "^3.84.0",
     "@t3-oss/env-core": "^0.6.1",
-    "@trpc/server": "^10.38.4",
+    "@trpc/server": "10.37.1",
     "fastify": "^4.23.2",
     "next-auth": "^4.23.1",
     "superjson": "^1.13.1",
     "trpc-openapi": "^1.2.0",
     "zod": "^3.22.2",
-    "auth": "workspace:^"
+    "@pedaki/auth": "workspace:*",
+    "@pedaki/db": "workspace:*"
   },
   "devDependencies": {
     "@pedaki/eslint-config": "^0.0.6",
