--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/fs-extra": "^11.0.2",
     "@types/node": "^18.17.14",
     "@vitest/coverage-v8": "^0.34.5",
+    "@total-typescript/ts-reset": "^0.5.1",
     "copyfiles": "latest",
     "dotenv-cli": "latest",
     "fs-extra": "^11.1.1",
