--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,6 @@
     "dev": "tsx watch src/index",
     "build": "tsup",
     "start": "node dist/index.js",
-
     "lint": "eslint .",
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
     "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
@@ -17,27 +16,28 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.2",
+    "@fastify/cookie": "^9.1.0",
     "@fastify/cors": "^8.4.0",
     "@fastify/swagger": "^8.10.1",
     "@fastify/swagger-ui": "^1.9.3",
-    "@auth/prisma-adapter": "^1.0.2",
+    "@pedaki/auth": "workspace:*",
+    "@pedaki/db": "workspace:*",
     "@pulumi/aws": "^6.2.0",
-    "@pulumi/random": "^4.14.0",
     "@pulumi/pulumi": "^3.84.0",
+    "@pulumi/random": "^4.14.0",
     "@t3-oss/env-core": "^0.6.1",
     "@trpc/server": "10.37.1",
     "fastify": "^4.23.2",
     "next-auth": "^4.23.1",
     "superjson": "^1.13.1",
     "trpc-openapi": "^1.2.0",
-    "zod": "^3.22.2",
-    "@pedaki/auth": "workspace:*",
-    "@pedaki/db": "workspace:*"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@pedaki/common": "^0.0.3",
     "@pedaki/eslint-config": "^0.0.6",
     "@pedaki/prettier-config": "^0.0.5",
-    "@pedaki/common": "^0.0.3",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "^18.17.0",
     "tsx": "^3.12.10"
