--- a/apps/www/.gitignore
+++ b/apps/www/.gitignore
@@ -1,13 +1,24 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
-.turbo
+/node_modules
 /.pnp
 .pnp.js
 
 # testing
 /coverage
+
+# database
+/prisma/db.sqlite
+/prisma/db.sqlite-journal
+
+# next.js
+/.next/
+/out/
+next-env.d.ts
+
+# production
+/build
 
 # misc
 .DS_Store
@@ -22,7 +33,7 @@ yarn-error.log*
 # local env files
 # do not commit any .env files to git, except for the .env.example file. https://create.t3.gg/en/usage/env-variables#using-environment-variables
 .env
-.env.local
+.env*.local
 
 # vercel
 .vercel
@@ -31,6 +42,7 @@ yarn-error.log*
 *.tsbuildinfo
 
 .idea
+.turbo
+build
 dist
-.envrc
-db
+.next
