--- a/.github/workflows/code-check.yml
+++ b/.github/workflows/code-check.yml
@@ -33,7 +33,7 @@ jobs:
         run: pnpm install --child-concurrency 3 --frozen-lockfile --prefer-offline
 
       - name: Generate db types
-        run: pnpm build --filter db
+        run: pnpm build --filter='./packages/*'
 
       - name: Run eslint
         run: pnpm lint
