--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -28,13 +28,16 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@pedaki/common": "^0.0.3",
+    "@auth/prisma-adapter": "^1.0.2",
     "@hookform/resolvers": "^3.3.1",
+    "@pedaki/api": "workspace:*",
+    "@pedaki/auth": "workspace:*",
+    "@pedaki/common": "file:.yalc/@pedaki/common",
+    "@pedaki/db": "workspace:*",
     "@pedaki/design": "^0.0.3",
     "@t3-oss/env-nextjs": "^0.6.1",
-    "@auth/prisma-adapter": "^1.0.2",
-    "@trpc/client": "10.38.4",
     "@tanstack/react-query": "^4.35.3",
+    "@trpc/client": "10.38.4",
     "@trpc/next": "10.38.4",
     "@trpc/react-query": "10.38.4",
     "@trpc/server": "10.38.4",
@@ -46,16 +49,13 @@
     "react-dom": "^18.2.0",
     "react-wrap-balancer": "^1.1.0",
     "sharp": "^0.32.6",
-    "zod": "^3.22.2",
-    "@pedaki/auth": "workspace:*",
-    "@pedaki/db": "workspace:*",
-    "@pedaki/api": "workspace:*"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@pedaki/eslint-config": "^0.0.6",
     "@pedaki/prettier-config": "^0.0.5",
-    "@types/sanitize-html": "^2.9.0",
     "@types/react": "^18.2.22",
+    "@types/sanitize-html": "^2.9.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.30"
   },
