--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -41,6 +41,8 @@
     "@pedaki/prettier-config": "^0.0.5",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "^18.17.0",
+    "esbuild-plugin-alias-path": "^2.0.2",
+    "esbuild-plugin-tsconfig-paths": "^1.0.1",
     "tsx": "^3.12.10"
   },
   "prettier": "@pedaki/prettier-config"
