add confirm-email page

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "noEmit": true,
-    "incremental": true,
+    "incremental": false,
     "noUncheckedIndexedAccess": true,
     "composite": false,
     "declaration": false,
