--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/index",
-    "build": "tsup",
+    "build": "tsup && copyfiles \"./package.json\" \"dist\"",
     "start": "node dist/index.js",
     "lint": "eslint .",
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
     "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
     "typecheck": "tsc --noEmit"
+  },
+  "publishConfig": {
+    "directory": "dist"
   },
   "keywords": [],
   "author": "Nathan David <me@vahor.fr>",
@@ -45,7 +48,7 @@
     "esbuild-plugin-alias-path": "^2.0.2",
     "esbuild-plugin-tsconfig-paths": "^1.0.1",
     "preview-email": "^3.0.19",
-    "tsx": "^3.12.10"
+    "tsx": "^3.13.0"
   },
   "prettier": "@pedaki/prettier-config"
 }
