--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,9 @@
   "globalDependencies": [
     "**/.env.*local"
   ],
+  "remoteCache": {
+    "signature": true
+  },
   "pipeline": {
     "build": {
       "dependsOn": [
