--- a/.github/workflows/code-check.yml
+++ b/.github/workflows/code-check.yml
@@ -15,7 +15,7 @@ jobs:
       SKIP_ENV_VALIDATION: true
       NEXT_TELEMETRY_DISABLED: 1
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-      TURBO_TEAM: ${{ vars.TURBO_TEAM }}
+      TURBO_TEAM: nathan
 
     runs-on: ubuntu-latest
     steps:
