--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -15,7 +15,8 @@
     "build": "tsup && copyfiles \"./package.json\" \"dist\""
   },
   "devDependencies": {
-    "@pedaki/db": "workspace:*"
+    "@pedaki/db": "workspace:*",
+    "@pedaki/esbuild-plugin-tsconfig-paths": "workspace:*"
   },
   "prettier": "@pedaki/prettier-config"
 }
