test increase max memory ?

--- a/.github/workflows/code-check.yml
+++ b/.github/workflows/code-check.yml
@@ -36,6 +36,8 @@ jobs:
 
       - name: Build
         run: pnpm build
+        env:
+          NODE_OPTIONS: "--max_old_space_size=4096"
 
       - name: Run eslint
         run: pnpm lint
