--- a/.github/workflows/code-check.yml
+++ b/.github/workflows/code-check.yml
@@ -15,6 +15,7 @@ jobs:
       SKIP_ENV_VALIDATION: true
       NEXT_TELEMETRY_DISABLED: 1
       DTS_ONLY: true
+      NODE_OPTIONS: --max-old-space-size=4096
 
     runs-on: ubuntu-latest
     steps:
