--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "@types/fs-extra": "^11.0.2",
     "@types/node": "^18.17.14",
     "@vitest/coverage-v8": "^0.34.5",
-    "copyfiles": "^2.4.1",
+    "cpy": "^10.1.0",
     "cross-env": "^7.0.3",
     "dotenv-cli": "latest",
     "fs-extra": "^11.1.1",
     "rimraf": "latest",
+    "tsconfig-replace-paths": "^0.0.14",
     "tsup": "^7.2.0",
     "turbo": "latest",
     "typescript": "^5.2.2",
