--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
     "typecheck": "tsc --noEmit",
 
-    "build": "tsup && copyfiles \"./package.json\" \"dist\""
+    "build": "tsup"
   },
   "devDependencies": {
     "@pedaki/db": "workspace:*",
