--- a/packages/settings/tsconfig.json
+++ b/packages/settings/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
+    "rootDir": "src",
+    "baseUrl": ".",
+    "outDir": "dist",
     "target": "es2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
@@ -26,7 +29,6 @@
     "preserveWatchOutput": true,
     "experimentalDecorators": true,
     "verbatimModuleSyntax": true,
-    "baseUrl": ".",
     "paths": {
       "~/*": ["src/*"]
     }
