--- a/packages/settings/tsconfig.json
+++ b/packages/settings/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "rootDir": "src",
+    "rootDir": ".",
     "baseUrl": ".",
     "outDir": "dist",
     "target": "es2017",
