--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,7 @@
 PULUMI_ACCESS_TOKEN=xxx
 
-DATABASE_URL="mysql://root:password@localhost/main"
-
 # openssl rand -base64 32
-NEXTAUTH_SECRET="
+NEXTAUTH_SECRET="supersecretsupersecret"
 NEXTAUTH_URL="http://localhost:4242"
 
 GOOGLE_CLIENT_ID=""
@@ -13,6 +11,7 @@ GOOGLE_CLIENT_SECRET=""
 PASSWORD_SALT="randomstring"
 
 MAILER_PREVIEW="true"
+RESEND_API_KEY="re_123"
 
 NEXT_PUBLIC_MAIN_URL="http://localhost:3000"
 DATABASE_URL="mysql://root:example@localhost/main"
