--- a/package.json
+++ b/package.json
@@ -23,19 +23,20 @@
     "check": "SKIP_ENV_VALIDATION=true && turbo typecheck lint format:check test"
   },
   "devDependencies": {
+    "@total-typescript/ts-reset": "^0.5.1",
     "@types/fs-extra": "^11.0.2",
     "@types/node": "^18.17.14",
     "@vitest/coverage-v8": "^0.34.5",
-    "@total-typescript/ts-reset": "^0.5.1",
-    "copyfiles": "latest",
+    "cpy": "^10.1.0",
+    "cross-env": "^7.0.3",
     "dotenv-cli": "latest",
     "fs-extra": "^11.1.1",
     "rimraf": "latest",
+    "tsconfig-replace-paths": "^0.0.14",
+    "tsup": "^7.2.0",
     "turbo": "latest",
     "typescript": "^5.2.2",
-    "vitest": "^0.34.5",
-    "cross-env": "^7.0.3",
-    "tsup":"^7.2.0"
+    "vitest": "^0.34.5"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
