--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,33 @@
   "globalDependencies": [
     "**/.env.*local"
   ],
+  "globalPassThroughEnv": [
+  ],
+  "globalEnv": [
+    "NODE_ENV",
+    "DTS_ONLY",
+    "API_DTS_ONLY",
+
+    "NEXT_PUBLIC_MAIN_URL",
+    "NEXT_PUBLIC_APP_URL",
+    "NEXT_PUBLIC_API_URL",
+    "APP_URL",
+
+    "GOOGLE_CLIENT_ID",
+    "GOOGLE_CLIENT_SECRET",
+
+    "PASSWORD_SALT",
+    "NEXTAUTH_SECRET",
+
+    "RESEND_API_KEY",
+
+    "DATABASE_URL",
+
+    "NEXT_PUBLIC_MAIN_URL"
+  ],
+  "remoteCache": {
+    "signature": true
+  },
   "pipeline": {
     "build": {
       "dependsOn": [
@@ -11,8 +38,7 @@
       "outputs": [
         ".next/**",
         "dist/**",
-        "!.next/cache/**",
-        "node_modules/.prisma/**"
+        "!.next/cache/**"
       ]
     },
     "start": {
