--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,4 @@ MAILER_PREVIEW="true"
 RESEND_API_KEY="re_123"
 
 NEXT_PUBLIC_MAIN_URL="http://localhost:3000"
-DATABASE_URL="mysql://root:example@localhost/main"
+DATABASE_URL="mysql://root:example@0.0.0.0/main"
