--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "tsx watch src/index",
     "build": "tsup && tsup --config models.tsup.config.ts",
     "start": "node dist/index.js",
-    "lint": "eslint .",
+    "lint": "eslint . --cache",
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
     "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
     "typecheck": "tsc --noEmit"
@@ -26,9 +27,8 @@
     "@fastify/swagger-ui": "^1.9.3",
     "@pedaki/auth": "workspace:*",
     "@pedaki/db": "workspace:*",
-    "@pedaki/mailer": "^0.0.2",
+    "@pedaki/mailer": "^0.0.4",
     "@pedaki/settings": "workspace:*",
-    "@pedaki/esbuild-plugin-tsconfig-paths": "workspace:*",
     "@pulumi/aws": "^6.2.1",
     "@pulumi/pulumi": "^3.85.0",
     "@pulumi/random": "^4.14.0",
@@ -41,8 +41,8 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@pedaki/common": "^0.0.4",
-    "@pedaki/eslint-config": "^0.0.6",
+    "@pedaki/common": "^0.0.5",
+    "@pedaki/eslint-config": "^0.0.7",
     "@pedaki/prettier-config": "^0.0.5",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "^18.17.0",
@@ -50,5 +50,12 @@
     "preview-email": "^3.0.19",
     "tsx": "^3.13.0"
   },
+  "engines": {
+    "node": ">=18.0.0 <19.0.0",
+    "pnpm": ">=8.0.0",
+    "yarn": "use-pnpm",
+    "npm": "use-pnpm"
+  },
+  "packageManager": "pnpm@8.7.6",
   "prettier": "@pedaki/prettier-config"
 }
