--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -12,11 +12,6 @@
     "url": "https://github.com/vahor/app.pedaki.fr.git/issues"
   },
   "homepage": "https://app.pedaki.fr",
-  "engines": {
-    "node": ">=18.0.0 <19.0.0",
-    "pnpm": ">=8.0.0"
-  },
-  "packageManager": "pnpm@8.7.6",
   "scripts": {
     "build": "next build",
     "dev": "dotenv -- next dev -p 4000",
@@ -32,9 +27,9 @@
     "@hookform/resolvers": "^3.3.1",
     "@pedaki/api": "workspace:*",
     "@pedaki/auth": "workspace:*",
-    "@pedaki/common": "^0.0.4",
+    "@pedaki/common": "^0.0.5",
     "@pedaki/db": "workspace:*",
-    "@pedaki/design": "^0.0.3",
+    "@pedaki/design": "^0.0.4",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@tanstack/react-query": "^4.35.3",
     "@trpc/client": "10.38.4",
@@ -52,12 +47,19 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@pedaki/eslint-config": "^0.0.6",
+    "@pedaki/eslint-config": "^0.0.7",
     "@pedaki/prettier-config": "^0.0.5",
     "@types/react": "^18.2.22",
     "@types/sanitize-html": "^2.9.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.30"
   },
+  "engines": {
+    "node": ">=18.0.0 <19.0.0",
+    "pnpm": ">=8.0.0",
+    "yarn": "use-pnpm",
+    "npm": "use-pnpm"
+  },
+  "packageManager": "pnpm@8.7.6",
   "prettier": "@pedaki/prettier-config"
 }
