--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cpy": "^10.1.0",
     "cross-env": "^7.0.3",
     "dotenv-cli": "latest",
+    "esbuild-plugin-file-path-extensions": "^1.0.0",
     "fs-extra": "^11.1.1",
     "rimraf": "latest",
     "tsconfig-replace-paths": "^0.0.14",
