--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,20 +2,31 @@
   "name": "@pedaki/db",
   "version": "0.0.0",
   "private": true,
-  "main": "./index.ts",
-  "types": "./index.ts",
+  "type": "module",
+  "exports": "./index.js",
+  "types": "./index.d.ts",
+  "publishConfig": {
+    "directory": "dist"
+  },
   "scripts": {
-    "build": "prisma generate",
-    "lint": "eslint .",
+    "build": "prisma generate && tsup",
+    "lint": "eslint . --cache",
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
     "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
     "typecheck": "tsc --noEmit"
   },
-  "prettier": "@pedaki/prettier-config",
   "dependencies": {
     "@prisma/client": "^5.3.1"
   },
   "devDependencies": {
     "prisma": "^5.3.1"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0 <19.0.0",
+    "pnpm": ">=8.0.0",
+    "yarn": "use-pnpm",
+    "npm": "use-pnpm"
+  },
+  "packageManager": "pnpm@8.7.6",
+  "prettier": "@pedaki/prettier-config"
 }
