--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -2,12 +2,13 @@
   "name": "@pedaki/settings",
   "version": "0.0.0",
   "private": true,
-  "main": "index.js",
+  "exports": "./index.js",
+  "type": "module",
   "publishConfig": {
     "directory": "dist"
   },
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint . --cache",
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
     "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
     "typecheck": "tsc --noEmit",
@@ -15,8 +16,14 @@
     "build": "tsup"
   },
   "devDependencies": {
-    "@pedaki/db": "workspace:*",
-    "@pedaki/esbuild-plugin-tsconfig-paths": "workspace:*"
+    "@pedaki/db": "workspace:*"
   },
+  "engines": {
+    "node": ">=18.0.0 <19.0.0",
+    "pnpm": ">=8.0.0",
+    "yarn": "use-pnpm",
+    "npm": "use-pnpm"
+  },
+  "packageManager": "pnpm@8.7.6",
   "prettier": "@pedaki/prettier-config"
 }
