--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ PASSWORD_SALT="randomstring"
 
 MAILER_PREVIEW="true"
 RESEND_API_KEY="re_123"
+PULUMI_ACCESS_TOKEN="xxx"
 
 NEXT_PUBLIC_MAIN_URL="http://localhost:3000"
 DATABASE_URL="mysql://root:example@0.0.0.0/main"
