--- a/turbo.json
+++ b/turbo.json
@@ -18,6 +18,8 @@
     "GOOGLE_CLIENT_ID",
     "GOOGLE_CLIENT_SECRET",
 
+    "PULUMI_ACCESS_TOKEN",
+
     "PASSWORD_SALT",
     "NEXTAUTH_SECRET",
 
