--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -11,6 +11,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "allowImportingTsExtensions": true,
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
