--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,7 @@
     "dev": "tsx watch src/index",
     "build": "tsup && tsup --config models.tsup.config.ts",
     "start": "node dist/index.js",
+    "seed": "tsx src/seeds/index.ts",
     "lint": "eslint . --cache",
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
     "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
