--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -4,7 +4,7 @@
     "rootDir": "src",
     "baseUrl": ".",
     "outDir": "dist",
-    "target": "es2017",
+    "target": "esnext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "checkJs": true,
@@ -31,7 +31,8 @@
     "experimentalDecorators": true,
     "verbatimModuleSyntax": true,
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": ["src/*"],
+      "@trpc/server/*": ["../../node_modules/@trpc/server/*"]
     }
   },
   "include": [
