--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cross-env": "^7.0.3",
     "dotenv-cli": "latest",
     "esbuild-plugin-file-path-extensions": "^1.0.0",
+    "execa": "^8.0.1",
     "fs-extra": "^11.1.1",
     "rimraf": "latest",
     "tsconfig-replace-paths": "^0.0.14",
