--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -14,7 +14,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -34,12 +34,7 @@
     }
   },
   "include": [
-    ".eslintrc.cjs",
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.cjs",
-    "**/*.mjs",
-    "src/reset.d.ts"
+    "src"
   ],
   "exclude": ["../node_modules", "node_modules", ".next", "out", "dist"]
 }
