--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -18,9 +18,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "typeRoots": ["./src"],
     "noEmit": true,
     "incremental": false,
     "noUncheckedIndexedAccess": true,
+    "skipDefaultLibCheck": true,
     "composite": false,
     "declaration": false,
     "declarationMap": false,
