--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "scripts": {
     "start": "dotenv -- turbo run start",
     "build": "dotenv -- turbo run build",
-    "test": "NODE_ENV=test dotenv -e .env.test -c -- turbo run test",
+    "test": "cross-env NODE_ENV=test dotenv -e .env.test -c -- turbo run test",
     "test:coverage": "NODE_ENV=test dotenv -e .env.test -c -- turbo run test:coverage",
     "test:watch": "NODE_ENV=test dotenv -e .env.test -c -- turbo run test:watch",
     "dev": "dotenv -- turbo run dev",
-    "lint": "SKIP_ENV_VALIDATION=true && turbo run lint",
+    "lint": "cross-env SKIP_ENV_VALIDATION=true turbo run lint",
     "format:check": "turbo run format:check",
     "typecheck": "turbo run typecheck",
     "format": "turbo run format",
     "clean": "turbo run clean && rimraf node_modules",
-    "check": "SKIP_ENV_VALIDATION=true && turbo typecheck lint format:check test"
+    "check": "cross-env SKIP_ENV_VALIDATION=true turbo typecheck lint format:check test"
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.5.1",
