--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -16,6 +16,8 @@
     "build": "tsup"
   },
   "devDependencies": {
+    "@pedaki/eslint-config": "^0.0.9",
+    "@pedaki/prettier-config": "^0.0.5",
     "@pedaki/db": "workspace:*",
     "next-auth": "^4.23.1"
   },
