--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -16,7 +16,10 @@
     "build": "tsup"
   },
   "devDependencies": {
-    "@pedaki/db": "workspace:*"
+    "@pedaki/eslint-config": "^0.0.9",
+    "@pedaki/prettier-config": "^0.0.5",
+    "@pedaki/db": "workspace:*",
+    "next-auth": "^4.23.1"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
