--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ NEXT_PUBLIC_API_URL="http://localhost:8080"
 APP_URL="http://localhost:4000"
 
 DATABASE_URL="mysql://root:example@0.0.0.0/main"
+# pn exec cloak generate
+PRISMA_ENCRYPTION_KEY=""
