--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "rimraf": "latest",
     "tsconfig-replace-paths": "^0.0.14",
     "tsup": "^7.2.0",
-    "turbo": "latest",
+    "turbo": "^1.10.14",
     "typescript": "^5.2.2",
     "vitest": "^0.34.6"
   },
