--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -16,10 +16,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@prisma/client": "^5.3.1"
+    "@prisma/client": "^5.4.1",
+    "prisma-field-encryption": "^1.5.0"
   },
   "devDependencies": {
-    "prisma": "^5.3.1"
+    "prisma": "^5.4.1"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
