--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ GOOGLE_CLIENT_SECRET=""
 
 # openssl rand -base64 126
 PASSWORD_SALT="randomstring"
+TOKEN_SECRET="randomstringrandomstringrandomst"
 
 MAILER_PREVIEW="true"
 RESEND_API_KEY="re_123"
