--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index",
-    "build": "tsup && tsup --config models.tsup.config.ts",
+    "build": "tsup",
     "build:dts": "cross-env API_DTS_ONLY=true pnpm build",
     "start": "node dist/index.js",
     "seed": "tsx src/seeds/index.ts",
@@ -28,6 +28,7 @@
     "@fastify/swagger": "^8.11.0",
     "@fastify/swagger-ui": "^1.10.0",
     "@pedaki/db": "workspace:*",
+    "@pedaki/schema": "workspace:*",
     "@pedaki/mailer": "^0.0.4",
     "@pedaki/settings": "workspace:*",
     "@pulumi/aws": "^6.4.0",
