--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -26,6 +26,7 @@
     "@auth/prisma-adapter": "^1.0.3",
     "@hookform/resolvers": "^3.3.1",
     "@pedaki/api": "workspace:*",
+    "@pedaki/schema": "workspace:*",
     "@pedaki/common": "^0.0.5",
     "@pedaki/db": "workspace:*",
     "@pedaki/design": "^0.0.4",
@@ -43,7 +44,11 @@
     "react-dom": "^18.2.0",
     "react-wrap-balancer": "^1.1.0",
     "sharp": "^0.32.6",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^2.0.0",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@pedaki/eslint-config": "^0.0.9",
