--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ APP_URL="http://localhost:4000"
 DATABASE_URL="mysql://root:example@0.0.0.0/main"
 # pn exec cloak generate
 PRISMA_ENCRYPTION_KEY=""
+
+STRIPE_SECRET_KEY=""
+STRIPE_WEBHOOK_SECRET=""
