--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,8 +28,8 @@
     "@fastify/swagger": "^8.11.0",
     "@fastify/swagger-ui": "^1.10.0",
     "@pedaki/db": "workspace:*",
-    "@pedaki/schema": "workspace:*",
     "@pedaki/mailer": "^0.0.5",
+    "@pedaki/schema": "workspace:*",
     "@pedaki/settings": "workspace:*",
     "@pulumi/aws": "^6.4.0",
     "@pulumi/pulumi": "^3.87.0",
@@ -37,7 +37,9 @@
     "@t3-oss/env-core": "^0.7.0",
     "@trpc/server": "10.40.0",
     "fastify": "^4.23.2",
+    "fastify-raw-body": "^4.2.2",
     "next-auth": "^4.23.2",
+    "stripe": "^13.9.0",
     "superjson": "^1.13.3",
     "trpc-openapi": "^1.2.0",
     "zod": "^3.22.4"
