--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -33,11 +33,11 @@
     "verbatimModuleSyntax": true,
     "paths": {
       "~/*": ["src/*"],
-      "@trpc/server/*": ["../../node_modules/@trpc/server/*"]
+//      "@trpc/server/*": ["../../node_modules/@trpc/server/*"]
     }
   },
   "include": [
     "src"
   ],
-  "exclude": ["../node_modules", "node_modules", ".next", "out", "dist"]
+  "exclude": ["../../node_modules","../node_modules", "node_modules", ".next", "out", "dist"]
 }
