--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,6 +2,7 @@
   "name": "@pedaki/api",
   "version": "1.0.0",
   "description": "",
+  "private": true,
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -26,17 +27,16 @@
     "@fastify/cookie": "^9.1.0",
     "@fastify/cors": "^8.4.0",
     "@fastify/swagger": "^8.11.0",
-    "@fastify/swagger-ui": "^1.10.0",
+    "@fastify/swagger-ui": "^1.10.1",
     "@pedaki/db": "workspace:*",
-    "@pedaki/mailer": "^0.0.5",
+    "@pedaki/mailer": "^0.0.6",
     "@pedaki/schema": "workspace:*",
-    "@pedaki/settings": "workspace:*",
     "@pulumi/aws": "^6.5.0",
     "@pulumi/pulumi": "^3.88.1",
     "@pulumi/random": "^4.14.0",
     "@t3-oss/env-core": "^0.7.0",
     "@trpc/server": "10.40.0",
-    "fastify": "^4.24.1",
+    "fastify": "^4.24.2",
     "fastify-raw-body": "^4.2.2",
     "next-auth": "^4.23.2",
     "stripe": "^13.10.0",
@@ -45,7 +45,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@pedaki/common": "^0.1.1",
+    "@pedaki/common": "^0.1.2",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "^18.18.0",
     "esbuild-plugin-tsconfig-paths": "^1.0.1",
