move pulumi package

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -17,6 +17,7 @@ COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 COPY apps/api/package.json ./apps/api/
 COPY packages/db/package.json ./packages/db/
 COPY packages/schema/package.json ./packages/schema/
+COPY packages/pulumi/package.json ./packages/pulumi/
 
 # TODO: remove no-frozen-lockfile
 RUN --mount=type=cache,id=s/cab6c3b8-fdd3-400e-be64-4ed3d5840452-/pnpm,target=/pnpm/store pnpm install --frozen-lockfile
@@ -52,6 +53,7 @@ ENV PATH="/root/.pulumi/bin:$PATH"
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/apps/api/dist ./dist
 COPY --from=builder /app/packages/schema/dist ./node_modules/@pedaki/schema
+COPY --from=builder /app/packages/pulumi/dist ./node_modules/@pedaki/pulumi
 COPY --from=builder /app/packages/db/dist ./node_modules/@pedaki/db
 
 ## Load public env vars
