--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,10 +31,7 @@
     "@pedaki/db": "workspace:*",
     "@pedaki/mailer": "^0.0.8",
     "@pedaki/schema": "workspace:*",
-    "@pulumi/aws": "^6.6.1",
-    "@pulumi/pulumi": "^3.91.1",
-    "@pulumi/random": "^4.14.0",
-    "@t3-oss/env-core": "^0.7.1",
+    "@pedaki/pulumi": "workspace:*",
     "@trpc/server": "10.43.0",
     "fastify": "^4.24.3",
     "fastify-raw-body": "^4.2.2",
@@ -43,6 +40,7 @@
     "superjson": "^2.2.0",
     "trpc-openapi": "^1.2.0",
     "@pedaki/common": "^0.1.4",
+    "@t3-oss/env-core": "^0.7.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
