load custom docker image

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,10 @@ API_ENCRYPTION_KEY="supersecretsupersecretsupersecre" # 32 bytes
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 
-DOCKER_IMAGE="ghcr.io/pedakihq/pedaki-premium:latest"
+DOCKER_HOST="ghcr.io"
+DOCKER_ORGANISATION="pedakihq"
+DOCKER_PACKAGE_NAME="pedaki-premium"
+DOCKER_IMAGE_VERSION="0.0.0"
 DOCKER_USERNAME=""
 DOCKER_PASSWORD=""
 
