use docker image on ec2 (#15)

--- a/packages/pulumi/package.json
+++ b/packages/pulumi/package.json
@@ -20,10 +20,11 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
-    "@pulumi/aws": "^6.6.1",
+    "@pedaki/common": "^0.1.4",
+    "@pedaki/schema": "workspace:*",
+    "@pulumi/aws": "^6.7.0",
     "@pulumi/pulumi": "^3.91.1",
     "@pulumi/random": "^4.14.0",
-    "@pedaki/schema": "workspace:*",
     "@t3-oss/env-core": "^0.7.1",
     "zod": "^3.22.4"
   },
