--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,28 @@
-PULUMI_ACCESS_TOKEN=xxx
-
-# openssl rand -base64 32
-NEXTAUTH_SECRET="supersecretsupersecret"
-NEXTAUTH_URL="http://localhost:4242"
-
-GOOGLE_CLIENT_ID=""
-GOOGLE_CLIENT_SECRET=""
-
-# openssl rand -base64 126
-PASSWORD_SALT="randomstring"
-
 MAILER_PREVIEW="true"
 RESEND_API_KEY="re_123"
 
 NEXT_PUBLIC_MAIN_URL="http://localhost:3000"
 NEXT_PUBLIC_STORE_URL="http://localhost:4000"
-NEXTAUTH_URL="http://localhost:4000"
 NEXT_PUBLIC_API_URL="http://localhost:8080"
 STORE_URL="http://localhost:4000"
 
 DATABASE_URL="mysql://root:example@0.0.0.0/main"
-# pn exec cloak generate
-PRISMA_ENCRYPTION_KEY=""
+PRISMA_ENCRYPTION_KEY=""  # pn exec cloak generate
 
 STRIPE_SECRET_KEY=""
 STRIPE_WEBHOOK_SECRET=""
 
 API_INTERNAL_SECRET="supersecretsupersecret"
-# 32 bytes
-API_ENCRYPTION_KEY="supersecretsupersecretsupersecre"
+API_ENCRYPTION_KEY="supersecretsupersecretsupersecre" # 32 bytes
+
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+
+DOCKER_HOST="ghcr.io"
+DOCKER_ORGANISATION="pedakihq"
+DOCKER_PACKAGE_NAME="pedaki-premium"
+DOCKER_IMAGE_VERSION="0.0.0"
+DOCKER_USERNAME=""
+DOCKER_PASSWORD=""
+
+PULUMI_ACCESS_TOKEN=xxx
