--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,9 +11,9 @@
     "build:dts": "cross-env API_DTS_ONLY=true pnpm build",
     "start": "node dist/index.js",
     "seed": "tsx src/seeds/index.ts",
-    "lint": "eslint . --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
-    "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
+    "lint": "eslint .",
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\"",
+    "format": "prettier --write \"**/*.{ts,tsx,mdx}\"",
     "typecheck": "tsc --noEmit --declaration"
   },
   "publishConfig": {
