--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,9 +11,9 @@
     "build:dts": "cross-env API_DTS_ONLY=true pnpm build",
     "start": "node dist/index.js",
     "seed": "tsx src/seeds/index.ts",
-    "lint": "eslint . --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
-    "format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
+    "lint": "eslint .",
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\"",
+    "format": "prettier --write \"**/*.{ts,tsx,mdx}\"",
     "typecheck": "tsc --noEmit --declaration"
   },
   "publishConfig": {
@@ -32,14 +32,14 @@
     "@pedaki/mailer": "^0.0.8",
     "@pedaki/schema": "workspace:*",
     "@pedaki/pulumi": "workspace:*",
-    "@trpc/server": "10.43.0",
+    "@trpc/server": "10.43.1",
     "fastify": "^4.24.3",
     "fastify-raw-body": "^4.2.2",
     "next-auth": "^4.24.4",
-    "stripe": "^14.2.0",
     "superjson": "^2.2.0",
     "trpc-openapi": "^1.2.0",
     "@pedaki/common": "^0.1.4",
+    "@pedaki/services": "workspace:*",
     "@t3-oss/env-core": "^0.7.1",
     "zod": "^3.22.4"
   },
