--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -28,8 +28,8 @@
     "@pedaki/api": "workspace:*",
     "@pedaki/common": "^0.1.4",
     "@pedaki/db": "workspace:*",
+    "@pedaki/models": "workspace:*",
     "@pedaki/design": "^0.4.1",
-    "@pedaki/schema": "workspace:*",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "10.43.1",
