--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pedaki/schema",
+  "name": "@pedaki/models",
   "version": "1.0.0",
   "description": "",
   "private": true,
@@ -21,9 +21,6 @@
   "license": "MIT",
   "dependencies": {
     "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "tsx": "^3.14.0"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0",
