--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "@pedaki/common": "0.4.2-beta.7",
     "@pedaki/db": "workspace:*",
-    "@pedaki/schema": "workspace:*",
+    "@pedaki/models": "workspace:*",
+    "@pedaki/pulumi": "workspace:*",
     "@t3-oss/env-core": "^0.7.1",
     "@trpc/server": "10.43.1",
     "stripe": "^14.3.0",
