fix: models package in Dockerfile

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -16,7 +16,7 @@ COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 
 COPY apps/api/package.json ./apps/api/
 COPY packages/db/package.json ./packages/db/
-COPY packages/schema/package.json ./packages/schema/
+COPY packages/models/package.json ./packages/models/
 COPY packages/services/package.json ./packages/services/
 COPY packages/pulumi/package.json ./packages/pulumi/
 
@@ -52,7 +52,7 @@ ENV PATH="/root/.pulumi/bin:$PATH"
 
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/apps/api/dist ./dist
-COPY --from=builder /app/packages/schema/dist ./node_modules/@pedaki/schema
+COPY --from=builder /app/packages/models/dist ./node_modules/@pedaki/models
 COPY --from=builder /app/packages/services/dist ./node_modules/@pedaki/services
 COPY --from=builder /app/packages/pulumi/dist ./node_modules/@pedaki/pulumi
 COPY --from=builder /app/packages/db/dist ./node_modules/@pedaki/db
